# surch

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
crates/surch-app/: Cargo.toml
crates/surch-app/assets/: AppIcon.icns
crates/surch-app/assets/themes/: one-dark.tmTheme
crates/surch-app/src/: app.rs  assets.rs  main.rs  sidebar.rs  theme.rs
crates/surch-app/src/components/: mod.rs
crates/surch-app/src/panels/: mod.rs  preview_panel.rs  search_panel.rs
crates/surch-core/: Cargo.toml
crates/surch-core/src/: channel.rs  config.rs  fuzzy.rs  lib.rs  path_trie.rs  registry.rs  workspace.rs
crates/surch-file-search/: Cargo.toml
crates/surch-file-search/src/: engine.rs  lib.rs
docs/: index.html
