[workspace]
resolver = "2"
members = [
    "crates/surch-app",
    "crates/surch-core",
    "crates/surch-file-search",
]

[workspace.dependencies]
gpui = "0.2.2"
gpui-component = { version = "0.5.1", features = ["tree-sitter-languages"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
crossbeam-channel = "0.5"
