[package]
name = "surch-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "surch"
path = "src/main.rs"

[dependencies]
surch-core = { path = "../surch-core" }
surch-file-search = { path = "../surch-file-search" }
gpui = { workspace = true }
gpui-component = { workspace = true }
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
rust-embed = "8"
dirs = "5.0"
